--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.27.0",
-    "sass": "^1.80.3"
+    "sass": "^1.80.3",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
